<resources>
    <string name="app_name">NavaPlayer</string>
    <string name="latest_songs">Latest songs:</string>
    <string name="setting">Setting</string>
    <string name="privacy_policies">Privacy policies  .</string>
    <string name="about">About  .</string>
    <string name="exit">Exit  .</string>
    <string name="donate">Donate</string>
    <string name="blank">___</string>
    <string name="lose_yourself_in_the_music">Lose yourself in the music</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="contact_us">Contact us  .</string>
    <string name="score">Score</string>
    <string name="home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite_songs">Favorite songs</string>
</resources>