<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/divider"
        android:title="@string/blank"
        >
        <menu>

        </menu>

    </item>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"/>


    <item
        android:id="@+id/policies"
        android:icon="@drawable/baseline_policy_24"
        android:title="@string/privacy_policies"/>

   <item
       android:id="@+id/donate"
       android:icon="@drawable/baseline_monetization_on_24"
       android:title="@string/donate"

       />

    <item
        android:id="@+id/score"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/score"
        />

    <item
        android:id="@+id/contactUs"
        android:icon="@drawable/baseline_email_24"
        android:title="@string/contact_us"/>

    <item
        android:id="@+id/about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about"/>


    <item
        android:id="@+id/exit"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/exit" />
</menu>