<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:tooltipText="@string/home"
        android:title="@string/home"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:tooltipText="@string/Favorite"
        android:title="@string/Favorite"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"
        android:tooltipText="@string/search"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"

        />

</menu>